kubernetes/apiserver-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: apiserver
  labels:
    app: transaction
    component: apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
      component: apiserver
  template:
    metadata:
      name: apiserver
      labels:
        app: transaction
        component: apiserver
    spec:
      containers:
      - image: docker_hub_user/apiserver:app_version
        name: apiserver
