kubernetes/elasticsearch-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: transaction
    component: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
      component: elasticsearch
  template:
    metadata:
      name: elasticsearch
      labels:
        app: transaction
        component: elasticsearch
    spec:
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch:6.6.2
        name: elasticsearch
