kubernetes/mysql-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: transaction
    component: mysql
    repo-db: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
      component: mysql
      repo-db: "true"
  template:
    metadata:
      name: mysql
      labels:
        app: transaction
        component: mysql
        repo-db: "true"
    spec:
      containers:
      - name: mysql
        image: mysql:8
        args: ["--sql_mode=","--default-authentication-plugin=mysql_native_password"]
        volumeMounts:
        - name: mysql-gce-pd-storage
          mountPath: /data/db
      volumes:
      - name: mysql-gce-pd-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
