kubernetes/ui-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ui
  labels:
    app: transaction
    component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
      component: ui
  template:
    metadata:
      name: ui
      labels:
        app: transaction
        component: ui
    spec:
      containers:
      - image: maxim1maxim/ui:1.3
        name: ui
