kubernetes/alertmanager-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app: transaction
    component: alertmanager
spec:
  ports:
  - port: 9093
    protocol: TCP
    targetPort: 9093
  selector:
    app: transaction
    component: alertmanager
