kubernetes/apiserver-service-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver-lb
  labels:
    app: transaction
    component: apiserver
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: transaction
    component: apiserver
