kubernetes/cadvisor-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  labels:
    app: transaction
    component: cadvisor
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: transaction
    component: cadvisor
