kubernetes/elasticsearch-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: transaction
    component: elasticsearch
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    app: transaction
    component: elasticsearch
