kubernetes/grafana-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: transaction
    component: grafana
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: transaction
    component: grafana
