kubernetes/jaeger-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: transaction
    component: jaeger
spec:
  ports:
  - port: 16686
    protocol: TCP
    targetPort: 16686
  selector:
    app: transaction
    component: jaeger
