kubernetes/kibana-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: transaction
    component: kibana
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: transaction
    component: kibana
