kubernetes/logstash-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: transaction
    component: logstash
spec:
  ports:
  - port: 5044
    protocol: TCP
    targetPort: 5044
  selector:
    app: transaction
    component: logstash
