kubernetes/mysql-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: transaction
    component: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: transaction
    component: mysql
