kubernetes/node-exporter-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    app: transaction
    component: node-exporter
spec:
  ports:
  - port: 9100
    protocol: TCP
    targetPort: 9100
  selector:
    app: transaction
    component: node-exporter
