kubernetes/prometheus-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: transaction
    component: prometheus
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: transaction
    component: prometheus
