kubernetes/repo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: repo
  labels:
    app: transaction
    component: repo
spec:
  ports:
  - port: 8080
    name: port-8080
    protocol: TCP
    targetPort: 8080
  - port: 8082
    name: port-8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: transaction
    component: repo
