kubernetes/ui-service-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-lb
  labels:
    app: transaction
    component: ui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: transaction
    component: ui
