kubernetes/mysql-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-db-traffic
  labels:
    app: transaction
spec:
  podSelector:
    matchLabels:
      app: transaction
      component: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: transaction
          component: repo
